source/objects/Sisense_TotalRevenue__c/Sisense_TotalRevenue__c.object-meta.xml
<CustomObject>
    <label>Sisense Total Revenue</label>
    <nameField>
        <displayFormat>SiTR-{0000}</displayFormat>
        <label>Sisense_TotalRevenue ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sisense Total Revenues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>